# Termif

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  README.md  README.ru.md  ROADMAP.md  ROADMAP.ru.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  patch2.mjs  patch_it.mjs  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows-artifacts.yml  ci-release.yml  ci-windows.yml  pages.yml
docs/: README.md  README.ru.md  ci-release-plan.md  ci-windows-plan.md  macos-distribution.ru.md  persistence-model.md  plugin-system-proposal.md  settings-model.md  update-checker.ru.md
docs/screenshots/: README.md
scripts/: apply-build-metadata.mjs  check-icon.mjs  create-latest-json.mjs  install-git-hooks.mjs  resolve-release-metadata.mjs  site-dev-server.mjs  sync-version.mjs
scripts/hooks/: pre-commit
site/: index.html  mock-releases.json  privacy.html  script.js  styles.css  terms.html
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  package.metadata  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  dialog.json
src-tauri/nsis/: termif-shell-integration.nsh
src-tauri/src/: lib.rs  main.rs  platform.rs
src-tauri/src/app/: shell.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/errors/: mod.rs
src-tauri/src/core/models/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/monitoring/: mod.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/pty/: mod.rs  parsers.rs
src-tauri/src/sessions/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/ui_events/: mod.rs
src/app/palette/: CommandPalette.css  CommandPalette.tsx
src/app/settings/: HotkeyRecorder.tsx  SettingsNav.tsx  SettingsPanel.css  SettingsPanel.model.ts  SettingsPanel.tsx  TerminalPreview.tsx  ThemeEditor.tsx
src/app/shell/: AppShell.css  AppShell.tsx  BootOverlay.css  BootOverlay.tsx  (+14 more)
src/components/: ContextMenu.test.ts  ContextMenu.tsx
src/hooks/: useHotkeys.ts
src/platform/: platform.test.ts  platform.ts
src/store/: appStoreUtils.test.ts  appStoreUtils.ts  tabDetach.test.ts  useAppStore.ts
src/theme/: app.css  themeEngine.ts  tokens.css
src/types/: models.ts
(+43 files in other folders)
