[package]
name = "termif"
version = "0.1.0"
description = "Termif - Modern Windows Terminal"
authors = ["Termif Contributors"]
license-file = "../LICENSE"
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
once_cell = "1"
portable-pty = "0.8"
russh = "0.59"
russh-sftp = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
