[package]
name = "termif"
version = "4.2.6"
description = "Termif - local-first cross-platform SSH workspace"
authors = ["Termif Contributors"]
license-file = "../LICENSE"
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
once_cell = "1"
portable-pty = "0.8"
russh = "0.61.1"
russh-sftp = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri = { version = "=2.11.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[patch.crates-io]
time = { version = "=0.3.40" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
